--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,8 @@ wheels/
 
 # Virtual environments
 .venv
+/.idea/AsteroidsGame.iml
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/inspectionProfiles/profiles_settings.xml
+/.idea/vcs.xml
